@@ -112,9 +112,10 @@ sctp_send_packet_dropped(struct sctp_tcb *, struct sctp_nets *, struct mbuf *,
 
 void sctp_send_cwr(struct sctp_tcb *, struct sctp_nets *, uint32_t);
 
+
 void
 sctp_send_str_reset_ack(struct sctp_tcb *stcb, 
-    struct sctp_stream_reset_req *req);
+    struct sctp_stream_reset_request *req);
 
 
 void
